syntax = "proto3" ;
package helloworld;

import "contact.proto";

import "google/api/annotations.proto";

option java_package = "com.helloworld.grpcservices";

option java_multiple_files = true;



service ContactService{
    rpc createContact(ContactProto) returns (Response){
        option(google.api.http) = {
            post: "/v1/contact"
            body: "*"
        };
    };
    rpc getContact(ContactId) returns (ContactProto){
        option (google.api.http) = {
            get: "/v1/contact/{id}"
        };
    };
    rpc updateContact(ContactProto) returns (Response){
        option(google.api.http) = {
            put: "/v1/contact"
            body: "*"
        };
    };
    rpc deleteContact(ContactId) returns (Response){
        option (google.api.http) = {
            delete: "/v1/contact/{id}"
        };
    };
}